--- a/src/main/resources/org/example/demo/Materiels.fxml
+++ b/src/main/resources/org/example/demo/Materiels.fxml
@@ -1,14 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
+<VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MaterielController" stylesheets="@styles.css">
+    <padding>
+        <Insets top="20" right="20" bottom="20" left="20"/>
+    </padding>
+    <spacing>15</spacing>
 
-</AnchorPane>
+    <!-- Title -->
+    <Label text="Material Management" styleClass="label-title" VBox.vgrow="NEVER"/>
+
+    <!-- Search Bar -->
+    <HBox spacing="10" alignment="CENTER_LEFT" VBox.vgrow="NEVER">
+        <Label text="Search:"/>
+        <TextField fx:id="searchField" promptText="Enter name or type" HBox.hgrow="ALWAYS"/>
+        <Button text="Search" onAction="#filterMaterials" styleClass="button-green"/>
+        <Button text="Reset" onAction="#resetFilter" styleClass="button-blue"/>
+    </HBox>
+
+    <!-- Table to Display Materials -->
+    <TableView fx:id="materielTable" VBox.vgrow="ALWAYS" styleClass="table-view">
+        <columns>
+            <TableColumn text="Name" prefWidth="150" fx:id="nomColumn"/>
+            <TableColumn text="Type" prefWidth="150" fx:id="typeColumn"/>
+            <TableColumn text="Total Quantity" prefWidth="120" fx:id="qteTotColumn"/>
+            <TableColumn text="Available Quantity" prefWidth="150" fx:id="qteDispColumn"/>
+            <TableColumn text="Location ID" prefWidth="80" fx:id="idLieuColumn"/>
+            <TableColumn text="Supplier ID" prefWidth="120" fx:id="idFournColumn"/>
+        </columns>
+    </TableView>
+
+    <!-- CRUD Buttons -->
+    <HBox spacing="10" alignment="CENTER_LEFT" VBox.vgrow="NEVER">
+        <Button text="Add" onAction="#openAddWindow" styleClass="button-green"/>
+        <Button text="Edit" onAction="#openEditWindow" styleClass="button-blue"/>
+        <Button text="Delete" onAction="#deleteSelectedMaterial" styleClass="button-red"/>
+    </HBox>
+
+    <!-- Notifications -->
+    <Label fx:id="notificationLabel" text="" styleClass="label-message" VBox.vgrow="NEVER"/>
+</VBox>
