--- a/src/main/resources/org/example/demo/ajouterMateriel.fxml
+++ b/src/main/resources/org/example/demo/ajouterMateriel.fxml
@@ -1,14 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
+<VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AjouterMaterielController" stylesheets="@styles.css">
+    <padding>
+        <Insets top="20" right="20" bottom="20" left="20"/>
+    </padding>
+    <spacing>15</spacing>
 
-</AnchorPane>
+    <!-- Title -->
+    <Label text="Add New Material" styleClass="label-title" VBox.vgrow="NEVER"/>
+
+    <!-- Form to Add a Material -->
+    <GridPane hgap="10" vgap="10" alignment="CENTER">
+        <Label text="Name:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
+        <TextField fx:id="nomField" promptText="Enter name" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+
+        <Label text="Type:" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
+        <TextField fx:id="typeField" promptText="Enter type" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+
+        <Label text="Total Quantity:" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
+        <TextField fx:id="qteTotField" promptText="Enter total quantity" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+
+        <Label text="Available Quantity:" GridPane.rowIndex="3" GridPane.columnIndex="0"/>
+        <TextField fx:id="qteDispField" promptText="Enter available quantity" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
+
+        <Label text="Location ID:" GridPane.rowIndex="4" GridPane.columnIndex="0"/>
+        <TextField fx:id="idLieuField" promptText="Enter location ID" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
+
+        <Label text="Supplier ID:" GridPane.rowIndex="5" GridPane.columnIndex="0"/>
+        <TextField fx:id="idFournField" promptText="Enter supplier ID" GridPane.rowIndex="5" GridPane.columnIndex="1"/>
+    </GridPane>
+
+    <!-- Add Button -->
+    <HBox spacing="10" alignment="CENTER_RIGHT" VBox.vgrow="NEVER">
+        <Button text="Add" onAction="#ajouterMateriel" styleClass="button-green"/>
+    </HBox>
+
+    <!-- Notifications -->
+    <Label fx:id="messageLabel" text="" styleClass="label-message" VBox.vgrow="NEVER"/>
+</VBox>
