--- a/src/main/resources/org/example/demo/modifFournisseur.fxml
+++ b/src/main/resources/org/example/demo/modifFournisseur.fxml
@@ -1,14 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
+<VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ModifFournisseurController" stylesheets="@styles.css">
+    <padding>
+        <Insets top="20" right="20" bottom="20" left="20"/>
+    </padding>
+    <spacing>15</spacing>
 
-</AnchorPane>
+    <!-- Titre -->
+    <Label text="Modifier un Fournisseur" styleClass="label-title" VBox.vgrow="NEVER"/>
+
+    <!-- Champs de Modification -->
+    <GridPane hgap="10" vgap="10" alignment="CENTER">
+        <Label text="ID:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
+        <TextField fx:id="idField" editable="false" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+
+        <Label text="Nom:" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
+        <TextField fx:id="nomField" promptText="Entrez le nom" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+
+        <Label text="Numéro:" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
+        <TextField fx:id="numField" promptText="Entrez le numéro" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+    </GridPane>
+
+    <!-- Bouton Modifier -->
+    <HBox spacing="10" alignment="CENTER_RIGHT" VBox.vgrow="NEVER">
+        <Button text="Modifier" onAction="#modifierFournisseur" styleClass="button-green"/>
+    </HBox>
+
+    <!-- Message de Notification -->
+    <Label fx:id="messageLabel" text="" styleClass="label-message" VBox.vgrow="NEVER"/>
+</VBox>
