--- a/src/main/resources/org/example/demo/ajouterFournisseur.fxml
+++ b/src/main/resources/org/example/demo/ajouterFournisseur.fxml
@@ -4,7 +4,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 
-<VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AjouterFournisseurController" stylesheets="@styles.css">
+<VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="controllers.AjouterFournisseurController"
+      stylesheets="@styles.css">
     <padding>
         <Insets top="20" right="20" bottom="20" left="20"/>
     </padding>
@@ -15,11 +17,15 @@
 
     <!-- Form to Add a Supplier -->
     <GridPane hgap="10" vgap="10" alignment="CENTER">
+        <!-- Name -->
         <Label text="Name:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
         <TextField fx:id="nomField" promptText="Enter name" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+        <Label fx:id="nomErrorLabel" GridPane.rowIndex="0" GridPane.columnIndex="2" />
 
+        <!-- Phone Number -->
         <Label text="Phone Number:" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
         <TextField fx:id="numField" promptText="Enter phone number" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+        <Label fx:id="numErrorLabel" GridPane.rowIndex="1" GridPane.columnIndex="2" />
     </GridPane>
 
     <!-- Add Button -->
