--- a/src/main/resources/org/example/demo/modifFournisseur.fxml
+++ b/src/main/resources/org/example/demo/modifFournisseur.fxml
@@ -4,7 +4,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 
-<VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ModifFournisseurController" stylesheets="@styles.css">
+<VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="controllers.ModifFournisseurController"
+      stylesheets="@styles.css">
     <padding>
         <Insets top="20" right="20" bottom="20" left="20"/>
     </padding>
@@ -15,14 +17,20 @@
 
     <!-- Champs de Modification -->
     <GridPane hgap="10" vgap="10" alignment="CENTER">
+
+        <!-- ID -->
         <Label text="ID:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
         <TextField fx:id="idField" editable="false" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
 
+        <!-- Nom -->
         <Label text="Nom:" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
         <TextField fx:id="nomField" promptText="Entrez le nom" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+        <Label fx:id="nomErrorLabel" GridPane.rowIndex="1" GridPane.columnIndex="2"/>
 
+        <!-- Numéro -->
         <Label text="Numéro:" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
         <TextField fx:id="numField" promptText="Entrez le numéro" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+        <Label fx:id="numErrorLabel" GridPane.rowIndex="2" GridPane.columnIndex="2"/>
     </GridPane>
 
     <!-- Bouton Modifier -->
