--- a/src/main/resources/org/example/demo/CardViewFournisseur.fxml
+++ b/src/main/resources/org/example/demo/CardViewFournisseur.fxml
@@ -26,8 +26,8 @@
         <padding><Insets top="10"/></padding>
         <Label text="ID Fournisseur : "/><Label fx:id="idLabel"/>
         <HBox spacing="10">
-            <JFXButton text="Modifier" style="-fx-background-color: #002366; -fx-text-fill: white;" onAction="#modifier"/>
-            <JFXButton text="Supprimer" style="-fx-background-color: red; -fx-text-fill: white;" onAction="#supprimer"/>
+            <JFXButton text="Modifier" styleClass="card-modifier-button" onAction="#modifier"/>
+            <JFXButton text="Supprimer" styleClass="card-supprimer-button" onAction="#supprimer"/>
         </HBox>
     </VBox>
 
