--- a/src/main/resources/org/example/demo/navigation.fxml
+++ b/src/main/resources/org/example/demo/navigation.fxml
@@ -12,63 +12,56 @@
             xmlns="http://javafx.com/javafx/11.0.1"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="controllers.NavigationController">
+
     <children>
         <BorderPane layoutX="114.0" layoutY="54.0" prefHeight="700.0" prefWidth="1500.0"
                     AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
                     AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 
-            <!-- Zone HAUTE -->
+            <!-- Zone HAUTE : Boutons Matériaux / Fournisseurs centrés -->
             <top>
-                <AnchorPane prefHeight="65.0" prefWidth="200.0"
-                            style="-fx-background-color: WHITE;"
-                            BorderPane.alignment="CENTER">
-                    <children>
-                        <!-- Barre noire supérieure -->
-                        <Pane layoutX="102.0" layoutY="20.0" prefHeight="25.0" prefWidth="200.0"
-                              style="-fx-background-color: #002366;"
-                              AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                              AnchorPane.topAnchor="0.0">
-                            <children>
-                                <ImageView fx:id="Exit" fitHeight="22.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@exit.png" />
-                                    </image>
-                                </ImageView>
-                            </children>
-                        </Pane>
+                <HBox spacing="20"
+                      style="-fx-background-color: #002366; -fx-padding: 10;"
+                      alignment="CENTER_LEFT">
+                    <!-- Logo à gauche -->
+                    <ImageView fx:id="imageView"
+                               fitWidth="100"
+                               fitHeight="100"
+                               layoutX="25"
+                               layoutY="10"
+                               preserveRatio="true"
+                               pickOnBounds="true">
+                        <image>
+                            <Image url="@logo1.png" />
+                        </image>
+                    </ImageView>
 
-                        <!-- Boutons Matériaux / Fournisseurs -->
-                        <HBox layoutX="239.0" layoutY="1.0" prefHeight="43.0" prefWidth="525.0"
-                              AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                              AnchorPane.topAnchor="25.0" spacing="20" alignment="CENTER">
-                            <children>
-                                <JFXButton fx:id="btnMaterielsTop" text="Matériaux"
-                                           styleClass="menu-top-button"
-                                           onAction="#handleMateriels">
-                                    <graphic>
-                                        <ImageView fitHeight="22.0" fitWidth="22.0"
-                                                   pickOnBounds="true" preserveRatio="true">
-                                            <Image url="@dash1.png" />
-                                        </ImageView>
-                                    </graphic>
-                                </JFXButton>
-                                <JFXButton fx:id="btnFournisseursTop" text="Fournisseurs"
-                                           styleClass="menu-top-button"
-                                           onAction="#handleFournisseurs">
-                                    <graphic>
-                                        <ImageView fitHeight="22.0" fitWidth="22.0"
-                                                   pickOnBounds="true" preserveRatio="true">
-                                            <Image url="@add1.png" />
-                                        </ImageView>
-                                    </graphic>
-                                </JFXButton>
-                            </children>
-                        </HBox>
-                    </children>
-                </AnchorPane>
+                    <!-- Espace flexible pour centrer les boutons -->
+                    <Pane HBox.hgrow="ALWAYS" />
+
+                    <!-- Boutons Matériaux / Fournisseurs -->
+                    <JFXButton fx:id="btnMaterielsTop" text="Matériaux"
+                               styleClass="menu-top-button"
+                               onAction="#handleMateriels" />
+
+                    <JFXButton fx:id="btnFournisseursTop" text="Fournisseurs"
+                               styleClass="menu-top-button"
+                               onAction="#handleFournisseurs" />
+
+                    <!-- Espace flexible après les boutons -->
+                    <Pane HBox.hgrow="ALWAYS" />
+
+                    <!-- Icône Exit -->
+                    <ImageView fx:id="Exit" fitHeight="22.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true"
+                               onMouseClicked="#handleExit">
+                        <image>
+                            <Image url="@exit.png" />
+                        </image>
+                    </ImageView>
+                </HBox>
             </top>
 
-            <!-- Menu latéral SANS les boutons Matériaux/Fournisseurs -->
+            <!-- Menu latéral : Gestion du Stock -->
             <left>
                 <VBox fx:id="sidebar" spacing="15"
                       style="-fx-background-color: #002366;">
@@ -76,16 +69,14 @@
                         <Insets top="25" right="15" bottom="25" left="15"/>
                     </padding>
 
+                    <!-- Titre dans le sidebar -->
                     <Label style="-fx-text-fill: white; -fx-font-weight: bold;" text="STOCK MANAGEMENT" />
 
                     <Separator style="-fx-background-color: white;" />
 
-                    <!-- Autres boutons utiles -->
-                    <JFXButton fx:id="btnAutreFonction" styleClass="sidebarItem" text="Autres Fonctions" textFill="WHITE">
-                        <font>
-                            <Font name="System Bold" size="15.0" />
-                        </font>
-                    </JFXButton>
+                    <!-- Autres boutons du menu -->
+                    <JFXButton fx:id="btnAutresFonctions" styleClass="sidebarItem" text="Autres Fonctions" textFill="WHITE" />
+                    <JFXButton fx:id="btnParametres" styleClass="sidebarItem" text="Paramètres" textFill="WHITE" />
 
                     <Region VBox.vgrow="ALWAYS" />
 
